# hypr-switcher

./: .gitignore  README.md  config.example  meson.build
docs/: ALT_TAB_MAPPING_ISSUE.md
src/: config.c  config.h  hypr_events.c  hypr_events.h  input.c  input.h  ipc.c  ipc.h  main.c  render.c  render.h  switcher_ipc.c  switcher_ipc.h  util.h  wayland.c  wayland.h
src/logger/: logger.c  logger.h
